[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist[psutil]>=3.8.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
